FIX: Pictures included in a document should not overflow its limits.

--- a/frontend/src/Page.css
+++ b/frontend/src/Page.css
@@ -70,3 +70,8 @@ p, ul, h1, h2 {
 dd {
   padding-left: 30px;
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
